# QG_Training

./: CMakeLists.txt  README.md  pom.xml
Week1/: CMakeLists.txt
major/Week1/: README.txt  第一周周记.md
major/Week1/LinkList/: README.md  第一周大组作业情况.md
major/Week2/: 第二周大组作业情况.md
major/Week2/Calculator/Header/: allinclude.h
major/Week2/Calculator/Resources/: main.c
major/Week2/Quene/Header/: LQueue.h
major/Week2/Quene/Resources/: LQueue.c  main.c
major/Week2/Stack/Head/: LinkStack.h
major/Week2/Stack/Resources/: LinkStack.c  main.c
major/Week3/DataGeneratingAndLoading_Sort/: 说明.md
major/Week3/SortApplication/: 说明.md
major/Week3/SortTest/: 说明.md
major/Week3/SortTest/Header/: main.h
major/Week3/SortTest/Source/: main.c
major/Week4/: 说明.md
major/Week4/BTS/Header/: binary_sort_tree.h
major/Week4/BTS/Sources/: binary_sort_tree.c  main.c
minor/Week1/: ddasd.cpp  ddasd.h  pom.xml  第一周周记.md  第一周小组作业情况.md
minor/Week1/ConnectionPool/: DataSourceManager.java  Main.java  properties.properties
minor/Week1/ConnectionPool/config/: DataSourceConfig.java
minor/Week1/ConnectionPool/connectionpool/: ConnectionPool.java
minor/Week1/JDBC/Utils/: JDBCUtils.java  MyHandler.java
minor/Week1/src/: Test.java  properties.properties
minor/Week1/src/Utils/: JDBCUtils.java  MyHandler.java
minor/Week1/src/pojo/: User.java
minor/Week2/: demo-instruction.md  第二周周记.md
minor/Week2/http-socket-demo/: pom.xml
minor/Week3/: 第三周周记.md  说明.md
minor/Week3/jquery_demo/: pom.xml
minor/Week4/: 第四周周记.md  说明.md
minor/Week4/signIn-signUp/: pom.xml
(+64 files in other folders)
